add global rule of underline for <a> tags

--- a/src/index.css
+++ b/src/index.css
@@ -25,12 +25,6 @@ body {
     color: #213547;
     background-color: #ffffff;
   }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
 }
 
 h1,
@@ -40,7 +34,11 @@ h4,
 h5,
 h6,
 p {
-  margin: 0;
+  margin: 0 !important;
+}
+
+a:hover {
+  text-decoration: underline !important;
 }
 
 .nav--button:hover {
