--- a/src/index.css
+++ b/src/index.css
@@ -77,7 +77,7 @@ a:hover {
 .playButton {
   background-color: #1ed661 !important;
   position: absolute;
-  right: 5px;
+  right: 10px;
   bottom: 0;
   opacity: 0;
   transform: translateY(5px);
@@ -86,5 +86,15 @@ a:hover {
 
 .cardComp:hover .playButton {
   opacity: 1;
-  transform: translateY(-5px);
+  transform: translateY(-10px);
+}
+
+.playButton:hover {
+  scale: 1.1;
+  background-color: #1ce265 !important;
+}
+
+.playButton:active {
+  scale: 1;
+  opacity: 0.8;
 }
