add signup page

--- a/src/index.css
+++ b/src/index.css
@@ -118,10 +118,11 @@ a:hover {
 
 .authSubmitButton {
   background-color: #1ed661 !important;
+  transition: scale 0.1s ease-in-out !important;
 }
 
 .authSubmitButton:hover {
-  scale: 1.1;
+  scale: 1.05;
 }
 
 .authSubmitButton:active {
