--- a/src/index.css
+++ b/src/index.css
@@ -41,6 +41,10 @@ a:hover {
   text-decoration: underline !important;
 }
 
+.nav--button {
+  text-decoration: none !important;
+}
+
 .nav--button:hover {
   scale: 1.05;
   border: solid 1px white !important;
@@ -133,7 +137,9 @@ a:hover {
 .sidebar--link,
 .sidebar--link:hover,
 .header--link,
-.header--link:hover {
+.header--link:hover,
+.nav--button-link,
+.nav--button-link:hover {
   text-decoration: none !important;
 }
 
