--- a/src/index.css
+++ b/src/index.css
@@ -185,7 +185,6 @@ a:hover {
 }
 
 .playlistpage--table-row {
-  cursor: pointer !important;
   color: #b3b3b3 !important;
 }
 
@@ -197,6 +196,16 @@ a:hover {
 
 td {
   vertical-align: middle !important;
+}
+
+.playlistpage--table-row-link {
+  color: inherit !important;
+  text-decoration: none !important;
+}
+
+.playlistpage--table-row-link:hover {
+  color: inherit !important;
+  text-decoration: underline !important;
 }
 
 .playlistpage--table-row-follow {
