add different sections for the search query

--- a/src/index.css
+++ b/src/index.css
@@ -69,13 +69,21 @@ a:hover {
   background-color: #292928 !important;
 }
 
+.cardTitle {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  line-clamp: 1;
+  -webkit-line-clamp: 1;
+}
+
 .cardSubtitle {
   color: #747474 !important;
   overflow: hidden;
   display: -webkit-box;
   -webkit-box-orient: vertical;
-  line-clamp: 2;
-  -webkit-line-clamp: 2;
+  line-clamp: 1;
+  -webkit-line-clamp: 1;
 }
 
 .playButton {
