--- a/src/index.css
+++ b/src/index.css
@@ -230,19 +230,18 @@ td {
 .playlistpage--table-row-index-wrapper {
   margin-left: 0.8rem !important;
   cursor: pointer;
+  position: relative !important;
 }
 
 .playlistpage--table-row-playicon {
-  display: none !important;
+  visibility: hidden !important;
+  position: absolute !important;
+  transform: translate(-20%, -50%);
 }
 
 .playlistpage--table-row:hover .playlistpage--table-row-playicon,
 .playlistpage--table-row-active .playlistpage--table-row-playicon {
-  display: block !important;
-}
-
-.playlistpage--table-row-index {
-  padding: 2px !important;
+  visibility: visible !important;
 }
 
 .playlistpage--table-row:hover .playlistpage--table-row-index,
